# open-public

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE-DATA  LICENSE-MIT  README.md  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.sqlx/: query-007f6e4f052920cc6cff6c46908509108529510ad70585bdbbcb5181e8936c1c.json  query-013cd05dd8faf50dbd570c32213ff1385d67a919c2fd92b6307c758519aa13dd.json  query-0265cc0633f34b079220898ef89a72fa47e9aa1365c3de878276f455faccca93.json  query-0292ac2cdd8a5fc3a08101dec2ce6edabdf303e2d30b0e5415086dab3822ca48.json  query-02be7936ff6ea899feacd462c1abf30f18aed91e81120c67e4df1269b1461cba.json  query-03478a33fe5dcaa2c89e54a2aee22200331626f9daec976edb5483d07771eff2.json  query-05c9678265d7ae95545f740b1305ed5bce551b64cc160dc5e64466f5360d4193.json  query-072dbc0f7d716584e5e75b33489367f900c7b038bad8d0d4c6d41e0ce157f63f.json  query-0a24456ffe7afba5a3f46e30619f33da4a9dcf540a57028a3aa9c77149647cdd.json  query-0adb42b301fb93c68509969207f1eb2d8d8698d00928e65b4ae14f088ea3e671.json  query-0e2d44c8fedd3b7d96e9024872aa96c80d97005b561921a1855d35a0bd4f8d61.json  query-0ec95c7116529633855090e8c343026583c3169a4198496ce6c7c5295e04c78b.json  query-0f90e137a601706cf2af8c5e066a5cf3d74e60ca17ad2d134299e697162fef8e.json  query-0ffcd021e3e530125d1cb1ae719289e593ae4196959ed26528d6e5b265c976ad.json  query-103fcd0ed2792991b40e2f5d07887d4c2c383d06575a388801fe723f6d356ded.json  query-106c61281dda0e4df90e41400003e74129b846928219b454c7953c10915a2c0c.json  query-119b77db34e05a0264ede569dbeeea1bd69019517d54a630c4af5aa510ed97d4.json  query-12172af04b5ecb7559eed858bc1933f8ac8f070e6f876af4c915a9d558569deb.json  query-13d568fe755a6a1c4b1f5900eeaa9f4c1febd7a45ca604f986ea2e7d8ad94145.json  (+257 more)
crates/db/: Cargo.toml
crates/db/src/: alliances.rs  assets.rs  compass.rs  conflicts.rs  country.rs  elections.rs  email_verifications.rs  events.rs  export.rs  follows.rs  lib.rs  news.rs  outlets.rs  parties.rs  password_resets.rs  people.rs  polls.rs  search.rs  sessions.rs  sources.rs  statements.rs  submissions.rs  translations.rs  users.rs
crates/db/src/service/: mod.rs  news.rs  polls.rs  statements.rs
crates/db/tests/: repo.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: import.rs  lib.rs  main.rs
crates/ingest/tests/: import.rs
crates/server/: Cargo.toml
crates/server/assets/: tailwind.css
crates/server/src/: admin_account.rs  auth.rs  config.rs  content.rs  error.rs  fmt.rs  i18n.rs  lib.rs  mail.rs  main.rs  media.rs  reviewer.rs  state.rs
crates/server/src/pages/: admin.rs  alliance.rs  alliances.rs  auth.rs  compass.rs  country.rs  data.rs  discovery.rs  elections.rs  feed.rs  follow.rs  history.rs  home.rs  mod.rs  news.rs  outlets.rs  parties.rs  party.rs  people.rs  person.rs  poll.rs  polls.rs  privacy.rs  search.rs  submit.rs
crates/server/src/ui/: background.rs  badge.rs  breadcrumb.rs  button.rs  citation.rs  election.rs  event.rs  follow.rs  hemicycle.rs  layout.rs  mod.rs  news.rs  outlet.rs  pagination.rs  poll_widget.rs  references.rs  search.rs  seat_bar.rs  statement.rs  timeline_entry.rs  translated.rs
crates/server/tests/: e2e.rs
(+78 files in other folders)
