[workspace]
resolver = "2"
members = ["crates/domain", "crates/db", "crates/server", "crates/ingest"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Web
axum = "0.8.9"
axum-extra = { version = "0.10.3", features = ["cookie"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
maud = { version = "0.27.0", features = ["axum"] }

# Data
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }

# Auth
argon2 = "0.5.3"
rand = "0.10.2"
sha2 = "0.10.9"
hmac = "0.12.1"
cookie = { version = "0.18", features = ["percent-encode"] }

# Mail
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls-tls"] }

# Serialization, errors, logging, config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"

# Internal crates
domain = { path = "crates/domain" }
db = { path = "crates/db" }

[profile.release]
codegen-units = 1
lto = "thin"
