[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
sqlx.workspace = true
domain.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
