[package]
name = "ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ingest"
path = "src/main.rs"

[lib]
name = "ingest"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
