[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower-http.workspace = true
maud.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
db.workspace = true
domain.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
cookie.workspace = true
lettre.workspace = true
reqwest.workspace = true
image.workspace = true

[dev-dependencies]
sqlx.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1.3"
image.workspace = true
tokio.workspace = true
